--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,9 @@
     "sourceType": "module"
   },
   "rules": {
-    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
+    "import/no-extraneous-dependencies": [0],
     "no-console": 0,
     "comma-dangle": [0],
     "arrow-parens": [0],
