--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,15 +15,16 @@
     "sourceType": "module"
   },
   "rules": {
+    "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "import/no-extraneous-dependencies": [0],
     "no-console": 0,
     "comma-dangle": [0],
     "arrow-parens": [0],
     "object-curly-spacing": ["warn", "always"],
     "array-bracket-spacing": ["warn", "always"],
     "import/prefer-default-export": [0],
-    "import/no-import-module-exports": [0]
+    "import/no-import-module-exports": [0],
+    "import/no-extraneous-dependencies": [0]
   }
 }
