--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "startdev": "nodemon --exec babel-node ./src/bin/www",
     "lint": "./node_modules/.bin/eslint ./src",
     "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
-    "postpretty": "yarn lint --fix"
+    "postpretty": "yarn lint --fix",
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -25,11 +27,17 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.21.0",
     "@babel/runtime": "^7.21.0",
+    "chai": "^4.3.7",
+    "coveralls": "^3.1.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.21",
-    "prettier": "^2.8.4"
+    "nyc": "^15.1.0",
+    "prettier": "^2.8.4",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.3.3"
   }
 }
